# oru_kural

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  build_web.sh  fly.toml  tasks.md  vercel.json
.github/workflows/: deploy_backend.yml  weekly_scrape.yml
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs
frontend/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json  tailwind.config.js
frontend/assets/: tailwind.css
frontend/src/: api.rs  main.rs  models.rs
frontend/src/components/: app_shell.rs  category_badge.rs  confidence_bar.rs  event_card.rs  events_feed.rs  filter_bar.rs  header.rs  issue_card.rs  issue_detail.rs  issues_board.rs  mod.rs  signal_card.rs  skeleton_card.rs  source_badge.rs  stats_panel.rs  status_badge.rs  tweet_card.rs  tweet_grid.rs
frontend/src/views/: detail.rs  home.rs  mod.rs
scripts/: categorize_signals.py  categorize_tweets.py  classifier_rules.py  cluster_issues.py  link_events_to_issues.py  llm.py  requirements.txt  run_pipeline.sh  scrape_cm_events.py  scrape_grievances.py  scrape_reddit.py  scrape_tweets.py  scrape_tweets_apify.py  test_local.py
supabase/migrations/: 002_scale_indexes_and_scrape_runs.sql  003_category_stats.sql  004_retention_archive.sql  005_categorization_failures.sql  006_v3_schema.sql  007_signals_table.sql  008_anon_read_policies.sql  009_signal_dedup_and_map_constraint.sql  add_translated_content.sql
