[package]
name = "oru-kural-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "compression-full"] }
tower_governor = { version = "0.4", features = ["axum"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
